{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 26,
  "lineage": "aafe8a52-4391-7660-7e87-dd9d3ec43d67",
  "resources": [
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_security_group",
      "name": "dallow_http_ssh-id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:security-group/sg-0ed95500d8133fab4",
            "description": "Allow http inbound traffic",
            "filter": null,
            "id": "sg-0ed95500d8133fab4",
            "name": "allow_http",
            "tags": {
              "Name": "allow_http_ssh",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-00534fcf004c514f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00534fcf004c514f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-a-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-056d20cd53a55493b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056d20cd53a55493b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-a-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-06d2f716fda2e4e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d2f716fda2e4e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-b-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dsubnet-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0f5ee6c976ff241dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5ee6c976ff241dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subnet-b-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:840175130015:instance/i-07691a490104b0d97",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07691a490104b0d97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-021cd21b11f7163a1",
            "private_dns": "ip-10-0-0-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.125",
            "public_dns": "ec2-54-227-11-168.compute-1.amazonaws.com",
            "public_ip": "54.227.11.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03190955bc653e2dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056d20cd53a55493b",
            "tags": {
              "Name": "webserver_task1"
            },
            "tags_all": {
              "Name": "webserver_task1",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed95500d8133fab4"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.webserver_key",
            "module.compute.data.aws_subnet.dsubnet-a-public",
            "module.compute.tls_private_key.webserver_private_key",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo",
            "module.security-groups.aws_security_group.allow_http_ssh",
            "module.security-groups.data.aws_vpc.dvpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ng-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d553a7c68d98776f",
            "domain": "vpc",
            "id": "eipalloc-0d553a7c68d98776f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-0-200-21.compute-1.amazonaws.com",
            "public_ip": "52.0.200.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-ng-adolfo"
            },
            "tags_all": {
              "Name": "eip-ng-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:internet-gateway/igw-00af7b8442b8ef4db",
            "id": "igw-00af7b8442b8ef4db",
            "owner_id": "840175130015",
            "tags": {
              "Name": "ig-adolfo"
            },
            "tags_all": {
              "Name": "ig-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d553a7c68d98776f",
            "connectivity_type": "public",
            "id": "nat-0047b827bcd357d1d",
            "network_interface_id": "eni-072cb1a0cce50e516",
            "private_ip": "10.0.0.75",
            "public_ip": "52.0.200.21",
            "subnet_id": "subnet-056d20cd53a55493b",
            "tags": {
              "Name": "ng-adolfo"
            },
            "tags_all": {
              "Name": "ng-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:route-table/rtb-0026341b548c62f9f",
            "id": "rtb-0026341b548c62f9f",
            "owner_id": "840175130015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0047b827bcd357d1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-adolfo"
            },
            "tags_all": {
              "Name": "rt-private-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_nat_gateway.ng-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:route-table/rtb-0aedde69615a62afe",
            "id": "rtb-0aedde69615a62afe",
            "owner_id": "840175130015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00af7b8442b8ef4db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-adolfo"
            },
            "tags_all": {
              "Name": "rt-public-adolfo",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-a-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b078097324831ab5",
            "route_table_id": "rtb-0026341b548c62f9f",
            "subnet_id": "subnet-00534fcf004c514f9"
          },
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_nat_gateway.ng-adolfo",
            "module.network.aws_route_table.rt-private-adolfo",
            "module.network.aws_subnet.subnet-a-private",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-a-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0470635d295376a4f",
            "route_table_id": "rtb-0aedde69615a62afe",
            "subnet_id": "subnet-056d20cd53a55493b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_route_table.rt-public-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-b-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd0d33ba09b21754",
            "route_table_id": "rtb-0026341b548c62f9f",
            "subnet_id": "subnet-06d2f716fda2e4e2d"
          },
          "dependencies": [
            "module.network.aws_eip.eip-ng-adolfo",
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_nat_gateway.ng-adolfo",
            "module.network.aws_route_table.rt-private-adolfo",
            "module.network.aws_subnet.subnet-a-public",
            "module.network.aws_subnet.subnet-b-private",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adolfo-b-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0164087274a29bb7a",
            "route_table_id": "rtb-0aedde69615a62afe",
            "subnet_id": "subnet-0f5ee6c976ff241dc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ig-adolfo",
            "module.network.aws_route_table.rt-public-adolfo",
            "module.network.aws_subnet.subnet-b-public",
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-00534fcf004c514f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00534fcf004c514f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-private"
            },
            "tags_all": {
              "Name": "subnet-a-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-056d20cd53a55493b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056d20cd53a55493b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-public"
            },
            "tags_all": {
              "Name": "subnet-a-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-06d2f716fda2e4e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d2f716fda2e4e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-private"
            },
            "tags_all": {
              "Name": "subnet-b-private",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:subnet/subnet-0f5ee6c976ff241dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5ee6c976ff241dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "840175130015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-public"
            },
            "tags_all": {
              "Name": "subnet-b-public",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:vpc/vpc-08e4c8b41a3ae8d58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ac959957a6a33c3",
            "default_route_table_id": "rtb-093fc2562077f8c88",
            "default_security_group_id": "sg-0aed6eec3614d3d22",
            "dhcp_options_id": "dopt-09d57686001c6faeb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e4c8b41a3ae8d58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093fc2562077f8c88",
            "owner_id": "840175130015",
            "tags": {
              "Name": "adolfo-vpc"
            },
            "tags_all": {
              "Name": "adolfo-vpc",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "dvpc-adolfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:vpc/vpc-08e4c8b41a3ae8d58",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f4da89d5981b1c09",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09d57686001c6faeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e4c8b41a3ae8d58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-093fc2562077f8c88",
            "owner_id": "840175130015",
            "tags": {
              "Name": "adolfo-vpc",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840175130015:security-group/sg-0ed95500d8133fab4",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed95500d8133fab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "840175130015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh",
              "from": "terraform",
              "owner": "Adolfo.Ninapaytan"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e4c8b41a3ae8d58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc-adolfo",
            "module.security-groups.data.aws_vpc.dvpc-adolfo"
          ]
        }
      ]
    }
  ]
}